// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildOSSFeatures returns features excluding reporting subfeatures 1`] = `
Array [
  Object {
    "id": "discover",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "replacedBy": Array [
                  Object {
                    "feature": "discover_v2",
                    "privileges": Array [
                      "url_create",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "replacedBy": Array [
                  Object {
                    "feature": "discover_v2",
                    "privileges": Array [
                      "store_search_session",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "discover_v2",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "visualize",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "replacedBy": Array [
                  Object {
                    "feature": "visualize_v2",
                    "privileges": Array [
                      "url_create",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "visualize_v2",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dashboard",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "replacedBy": Array [
                  Object {
                    "feature": "dashboard_v2",
                    "privileges": Array [
                      "url_create",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "replacedBy": Array [
                  Object {
                    "feature": "dashboard_v2",
                    "privileges": Array [
                      "store_search_session",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dashboard_v2",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dev_tools",
    "subFeatures": undefined,
  },
  Object {
    "id": "advancedSettings",
    "subFeatures": undefined,
  },
  Object {
    "id": "indexPatterns",
    "subFeatures": undefined,
  },
  Object {
    "id": "filesManagement",
    "subFeatures": undefined,
  },
  Object {
    "id": "filesSharedImage",
    "subFeatures": undefined,
  },
  Object {
    "id": "savedObjectsManagement",
    "subFeatures": undefined,
  },
  Object {
    "id": "savedQueryManagement",
    "subFeatures": undefined,
  },
]
`;

exports[`buildOSSFeatures returns features including reporting subfeatures 1`] = `
Array [
  Object {
    "id": "discover",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "replacedBy": Array [
                  Object {
                    "feature": "discover_v2",
                    "privileges": Array [
                      "url_create",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "replacedBy": Array [
                  Object {
                    "feature": "discover_v2",
                    "privileges": Array [
                      "store_search_session",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Reporting",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "generateReport",
                ],
                "id": "generate_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "name": "Generate CSV reports",
                "replacedBy": Array [
                  Object {
                    "feature": "discover_v2",
                    "privileges": Array [
                      "generate_report",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "generateCsv",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "discover_v2",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Reporting",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "generateReport",
                ],
                "id": "generate_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "name": "Generate CSV reports",
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "generateCsv",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "visualize",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "replacedBy": Array [
                  Object {
                    "feature": "visualize_v2",
                    "privileges": Array [
                      "url_create",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Reporting",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "generateReport",
                ],
                "id": "generate_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "minimumLicense": "gold",
                "name": "Generate PDF or PNG reports",
                "replacedBy": Array [
                  Object {
                    "feature": "visualize_v2",
                    "privileges": Array [
                      "generate_report",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "generateScreenshot",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "visualize_v2",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Reporting",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "generateReport",
                ],
                "id": "generate_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "minimumLicense": "gold",
                "name": "Generate PDF or PNG reports",
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "generateScreenshot",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dashboard",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "replacedBy": Array [
                  Object {
                    "feature": "dashboard_v2",
                    "privileges": Array [
                      "url_create",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "replacedBy": Array [
                  Object {
                    "feature": "dashboard_v2",
                    "privileges": Array [
                      "store_search_session",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Reporting",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "generateReport",
                ],
                "id": "generate_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "minimumLicense": "gold",
                "name": "Generate PDF or PNG reports",
                "replacedBy": Array [
                  Object {
                    "feature": "dashboard_v2",
                    "privileges": Array [
                      "generate_report",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "generateScreenshot",
                ],
              },
              Object {
                "api": Array [
                  "downloadCsv",
                ],
                "id": "download_csv_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "name": "Generate CSV reports from Discover session panels",
                "replacedBy": Array [
                  Object {
                    "feature": "dashboard_v2",
                    "privileges": Array [
                      "download_csv_report",
                    ],
                  },
                ],
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "downloadCsv",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dashboard_v2",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Reporting",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "generateReport",
                ],
                "id": "generate_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "minimumLicense": "gold",
                "name": "Generate PDF or PNG reports",
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "generateScreenshot",
                ],
              },
              Object {
                "api": Array [
                  "downloadCsv",
                ],
                "id": "download_csv_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "name": "Generate CSV reports from Discover session panels",
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "downloadCsv",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dev_tools",
    "subFeatures": undefined,
  },
  Object {
    "id": "advancedSettings",
    "subFeatures": undefined,
  },
  Object {
    "id": "indexPatterns",
    "subFeatures": undefined,
  },
  Object {
    "id": "filesManagement",
    "subFeatures": undefined,
  },
  Object {
    "id": "filesSharedImage",
    "subFeatures": undefined,
  },
  Object {
    "id": "savedObjectsManagement",
    "subFeatures": undefined,
  },
  Object {
    "id": "savedQueryManagement",
    "subFeatures": undefined,
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the advancedSettings feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "advanced_settings",
      ],
      "management": Object {
        "kibana": Array [
          "settings",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "config",
        ],
        "read": Array [],
      },
      "ui": Array [
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "advanced_settings",
      ],
      "management": Object {
        "kibana": Array [
          "settings",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the dashboard feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "bulkGetUserProfiles",
        "dashboardUsageStats",
        "savedQuery:manage",
        "savedQuery:read",
        "store_search_session",
      ],
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "assign": Array [],
        "create": Array [],
        "createComment": Array [],
        "delete": Array [],
        "push": Array [],
        "read": Array [],
        "reopenCase": Array [],
        "settings": Array [],
        "update": Array [],
      },
      "catalogue": Array [
        "dashboard",
      ],
      "management": Object {
        "kibana": Array [
          "search_sessions",
        ],
      },
      "replacedBy": Object {
        "default": Array [
          Object {
            "feature": "dashboard_v2",
            "privileges": Array [
              "all",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "all",
            ],
          },
        ],
        "minimal": Array [
          Object {
            "feature": "dashboard_v2",
            "privileges": Array [
              "minimal_all",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "minimal_all",
            ],
          },
        ],
      },
      "savedObject": Object {
        "all": Array [
          "dashboard",
          "query",
          "url",
          "search-session",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "canvas-workpad",
          "lens",
          "links",
          "map",
          "tag",
        ],
      },
      "ui": Array [
        "createNew",
        "show",
        "showWriteControls",
        "saveQuery",
        "createShortUrl",
        "storeSearchSession",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "bulkGetUserProfiles",
        "dashboardUsageStats",
        "savedQuery:read",
      ],
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "catalogue": Array [
        "dashboard",
      ],
      "replacedBy": Object {
        "default": Array [
          Object {
            "feature": "dashboard_v2",
            "privileges": Array [
              "read",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "read",
            ],
          },
        ],
        "minimal": Array [
          Object {
            "feature": "dashboard_v2",
            "privileges": Array [
              "minimal_read",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "minimal_read",
            ],
          },
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "canvas-workpad",
          "lens",
          "links",
          "map",
          "dashboard",
          "tag",
          "query",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the dashboard_v2 feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "bulkGetUserProfiles",
        "dashboardUsageStats",
        "store_search_session",
      ],
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "assign": Array [],
        "create": Array [],
        "createComment": Array [],
        "delete": Array [],
        "push": Array [],
        "read": Array [],
        "reopenCase": Array [],
        "settings": Array [],
        "update": Array [],
      },
      "catalogue": Array [
        "dashboard",
      ],
      "management": Object {
        "kibana": Array [
          "search_sessions",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "dashboard",
          "url",
          "search-session",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "canvas-workpad",
          "lens",
          "links",
          "map",
          "tag",
        ],
      },
      "ui": Array [
        "createNew",
        "show",
        "showWriteControls",
        "createShortUrl",
        "storeSearchSession",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "bulkGetUserProfiles",
        "dashboardUsageStats",
      ],
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "catalogue": Array [
        "dashboard",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "canvas-workpad",
          "lens",
          "links",
          "map",
          "dashboard",
          "tag",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the dev_tools feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "console",
      ],
      "app": Array [
        "dev_tools",
        "kibana",
      ],
      "catalogue": Array [
        "console",
        "searchprofiler",
        "grokdebugger",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [
        "show",
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "console",
      ],
      "app": Array [
        "dev_tools",
        "kibana",
      ],
      "catalogue": Array [
        "console",
        "searchprofiler",
        "grokdebugger",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the discover feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "fileUpload:analyzeFile",
        "savedQuery:manage",
        "savedQuery:read",
        "store_search_session",
      ],
      "app": Array [
        "discover",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "assign": Array [],
        "create": Array [],
        "createComment": Array [],
        "delete": Array [],
        "push": Array [],
        "read": Array [],
        "reopenCase": Array [],
        "settings": Array [],
        "update": Array [],
      },
      "catalogue": Array [
        "discover",
      ],
      "management": Object {
        "kibana": Array [
          "search_sessions",
        ],
      },
      "replacedBy": Object {
        "default": Array [
          Object {
            "feature": "discover_v2",
            "privileges": Array [
              "all",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "all",
            ],
          },
        ],
        "minimal": Array [
          Object {
            "feature": "discover_v2",
            "privileges": Array [
              "minimal_all",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "minimal_all",
            ],
          },
        ],
      },
      "savedObject": Object {
        "all": Array [
          "search",
          "query",
          "url",
          "search-session",
        ],
        "read": Array [
          "index-pattern",
        ],
      },
      "ui": Array [
        "show",
        "save",
        "saveQuery",
        "createShortUrl",
        "storeSearchSession",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "savedQuery:read",
      ],
      "app": Array [
        "discover",
        "kibana",
      ],
      "catalogue": Array [
        "discover",
      ],
      "replacedBy": Object {
        "default": Array [
          Object {
            "feature": "discover_v2",
            "privileges": Array [
              "read",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "read",
            ],
          },
        ],
        "minimal": Array [
          Object {
            "feature": "discover_v2",
            "privileges": Array [
              "minimal_read",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "minimal_read",
            ],
          },
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "query",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the discover_v2 feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "fileUpload:analyzeFile",
        "store_search_session",
      ],
      "app": Array [
        "discover",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "assign": Array [],
        "create": Array [],
        "createComment": Array [],
        "delete": Array [],
        "push": Array [],
        "read": Array [],
        "reopenCase": Array [],
        "settings": Array [],
        "update": Array [],
      },
      "catalogue": Array [
        "discover",
      ],
      "management": Object {
        "kibana": Array [
          "search_sessions",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "search",
          "url",
          "search-session",
        ],
        "read": Array [
          "index-pattern",
        ],
      },
      "ui": Array [
        "show",
        "save",
        "createShortUrl",
        "storeSearchSession",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [],
      "app": Array [
        "discover",
        "kibana",
      ],
      "catalogue": Array [
        "discover",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the filesManagement feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "files:manageFiles",
        "files:defaultImage",
      ],
      "app": Array [
        "kibana",
      ],
      "management": Object {
        "kibana": Array [
          "filesManagement",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "file",
          "fileShare",
        ],
        "read": Array [],
      },
      "ui": Array [],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "files:manageFiles",
        "files:defaultImage",
      ],
      "app": Array [
        "kibana",
      ],
      "management": Object {
        "kibana": Array [
          "filesManagement",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "file",
          "fileShare",
        ],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the filesSharedImage feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "files:defaultImage",
      ],
      "app": Array [
        "kibana",
      ],
      "savedObject": Object {
        "all": Array [
          "file",
        ],
        "read": Array [],
      },
      "ui": Array [],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "files:defaultImage",
      ],
      "app": Array [
        "kibana",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "file",
        ],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the indexPatterns feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "indexPatterns:manage",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "indexPatterns",
      ],
      "management": Object {
        "kibana": Array [
          "indexPatterns",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "index-pattern",
        ],
        "read": Array [],
      },
      "ui": Array [
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "indexPatterns",
      ],
      "management": Object {
        "kibana": Array [
          "indexPatterns",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
        ],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the savedObjectsManagement feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "copySavedObjectsToSpaces",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "saved_objects",
      ],
      "management": Object {
        "kibana": Array [
          "objects",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "foo",
          "bar",
        ],
        "read": Array [],
      },
      "ui": Array [
        "read",
        "edit",
        "delete",
        "copyIntoSpace",
        "shareIntoSpace",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "copySavedObjectsToSpaces",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "saved_objects",
      ],
      "management": Object {
        "kibana": Array [
          "objects",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "foo",
          "bar",
        ],
      },
      "ui": Array [
        "read",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the savedQueryManagement feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "savedQuery:manage",
        "savedQuery:read",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [],
      "savedObject": Object {
        "all": Array [
          "query",
        ],
        "read": Array [],
      },
      "ui": Array [
        "showQueries",
        "saveQuery",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "savedQuery:read",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "query",
        ],
      },
      "ui": Array [
        "showQueries",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the visualize feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "savedQuery:manage",
        "savedQuery:read",
      ],
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "assign": Array [],
        "create": Array [],
        "createComment": Array [],
        "delete": Array [],
        "push": Array [],
        "read": Array [],
        "reopenCase": Array [],
        "settings": Array [],
        "update": Array [],
      },
      "catalogue": Array [
        "visualize",
      ],
      "management": Object {},
      "replacedBy": Object {
        "default": Array [
          Object {
            "feature": "visualize_v2",
            "privileges": Array [
              "all",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "all",
            ],
          },
        ],
        "minimal": Array [
          Object {
            "feature": "visualize_v2",
            "privileges": Array [
              "minimal_all",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "minimal_all",
            ],
          },
        ],
      },
      "savedObject": Object {
        "all": Array [
          "visualization",
          "lens",
          "query",
          "url",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "tag",
        ],
      },
      "ui": Array [
        "show",
        "delete",
        "save",
        "saveQuery",
        "createShortUrl",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "savedQuery:read",
      ],
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "catalogue": Array [
        "visualize",
      ],
      "replacedBy": Object {
        "default": Array [
          Object {
            "feature": "visualize_v2",
            "privileges": Array [
              "read",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "read",
            ],
          },
        ],
        "minimal": Array [
          Object {
            "feature": "visualize_v2",
            "privileges": Array [
              "minimal_read",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "minimal_read",
            ],
          },
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "lens",
          "tag",
          "query",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the visualize_v2 feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [],
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "assign": Array [],
        "create": Array [],
        "createComment": Array [],
        "delete": Array [],
        "push": Array [],
        "read": Array [],
        "reopenCase": Array [],
        "settings": Array [],
        "update": Array [],
      },
      "catalogue": Array [
        "visualize",
      ],
      "management": Object {},
      "savedObject": Object {
        "all": Array [
          "visualization",
          "lens",
          "url",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "tag",
        ],
      },
      "ui": Array [
        "show",
        "delete",
        "save",
        "createShortUrl",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [],
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "catalogue": Array [
        "visualize",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "lens",
          "tag",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the advancedSettings feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "advanced_settings",
      ],
      "management": Object {
        "kibana": Array [
          "settings",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "config",
        ],
        "read": Array [],
      },
      "ui": Array [
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "advanced_settings",
      ],
      "management": Object {
        "kibana": Array [
          "settings",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the dashboard feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "bulkGetUserProfiles",
        "dashboardUsageStats",
        "savedQuery:manage",
        "savedQuery:read",
        "store_search_session",
      ],
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "assign": Array [],
        "create": Array [],
        "createComment": Array [],
        "delete": Array [],
        "push": Array [],
        "read": Array [],
        "reopenCase": Array [],
        "settings": Array [],
        "update": Array [],
      },
      "catalogue": Array [
        "dashboard",
      ],
      "management": Object {
        "kibana": Array [
          "search_sessions",
        ],
      },
      "replacedBy": Object {
        "default": Array [
          Object {
            "feature": "dashboard_v2",
            "privileges": Array [
              "all",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "all",
            ],
          },
        ],
        "minimal": Array [
          Object {
            "feature": "dashboard_v2",
            "privileges": Array [
              "minimal_all",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "minimal_all",
            ],
          },
        ],
      },
      "savedObject": Object {
        "all": Array [
          "dashboard",
          "query",
          "url",
          "search-session",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "canvas-workpad",
          "lens",
          "links",
          "map",
          "tag",
        ],
      },
      "ui": Array [
        "createNew",
        "show",
        "showWriteControls",
        "saveQuery",
        "createShortUrl",
        "storeSearchSession",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "bulkGetUserProfiles",
        "dashboardUsageStats",
        "savedQuery:read",
      ],
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "catalogue": Array [
        "dashboard",
      ],
      "replacedBy": Object {
        "default": Array [
          Object {
            "feature": "dashboard_v2",
            "privileges": Array [
              "read",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "read",
            ],
          },
        ],
        "minimal": Array [
          Object {
            "feature": "dashboard_v2",
            "privileges": Array [
              "minimal_read",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "minimal_read",
            ],
          },
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "canvas-workpad",
          "lens",
          "links",
          "map",
          "dashboard",
          "tag",
          "query",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the dashboard_v2 feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "bulkGetUserProfiles",
        "dashboardUsageStats",
        "store_search_session",
      ],
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "assign": Array [],
        "create": Array [],
        "createComment": Array [],
        "delete": Array [],
        "push": Array [],
        "read": Array [],
        "reopenCase": Array [],
        "settings": Array [],
        "update": Array [],
      },
      "catalogue": Array [
        "dashboard",
      ],
      "management": Object {
        "kibana": Array [
          "search_sessions",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "dashboard",
          "url",
          "search-session",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "canvas-workpad",
          "lens",
          "links",
          "map",
          "tag",
        ],
      },
      "ui": Array [
        "createNew",
        "show",
        "showWriteControls",
        "createShortUrl",
        "storeSearchSession",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "bulkGetUserProfiles",
        "dashboardUsageStats",
      ],
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "catalogue": Array [
        "dashboard",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "canvas-workpad",
          "lens",
          "links",
          "map",
          "dashboard",
          "tag",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the dev_tools feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "console",
      ],
      "app": Array [
        "dev_tools",
        "kibana",
      ],
      "catalogue": Array [
        "console",
        "searchprofiler",
        "grokdebugger",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [
        "show",
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "console",
      ],
      "app": Array [
        "dev_tools",
        "kibana",
      ],
      "catalogue": Array [
        "console",
        "searchprofiler",
        "grokdebugger",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the discover feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "fileUpload:analyzeFile",
        "savedQuery:manage",
        "savedQuery:read",
        "store_search_session",
      ],
      "app": Array [
        "discover",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "assign": Array [],
        "create": Array [],
        "createComment": Array [],
        "delete": Array [],
        "push": Array [],
        "read": Array [],
        "reopenCase": Array [],
        "settings": Array [],
        "update": Array [],
      },
      "catalogue": Array [
        "discover",
      ],
      "management": Object {
        "kibana": Array [
          "search_sessions",
        ],
      },
      "replacedBy": Object {
        "default": Array [
          Object {
            "feature": "discover_v2",
            "privileges": Array [
              "all",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "all",
            ],
          },
        ],
        "minimal": Array [
          Object {
            "feature": "discover_v2",
            "privileges": Array [
              "minimal_all",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "minimal_all",
            ],
          },
        ],
      },
      "savedObject": Object {
        "all": Array [
          "search",
          "query",
          "url",
          "search-session",
        ],
        "read": Array [
          "index-pattern",
        ],
      },
      "ui": Array [
        "show",
        "save",
        "saveQuery",
        "createShortUrl",
        "storeSearchSession",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "savedQuery:read",
      ],
      "app": Array [
        "discover",
        "kibana",
      ],
      "catalogue": Array [
        "discover",
      ],
      "replacedBy": Object {
        "default": Array [
          Object {
            "feature": "discover_v2",
            "privileges": Array [
              "read",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "read",
            ],
          },
        ],
        "minimal": Array [
          Object {
            "feature": "discover_v2",
            "privileges": Array [
              "minimal_read",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "minimal_read",
            ],
          },
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "query",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the discover_v2 feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "fileUpload:analyzeFile",
        "store_search_session",
      ],
      "app": Array [
        "discover",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "assign": Array [],
        "create": Array [],
        "createComment": Array [],
        "delete": Array [],
        "push": Array [],
        "read": Array [],
        "reopenCase": Array [],
        "settings": Array [],
        "update": Array [],
      },
      "catalogue": Array [
        "discover",
      ],
      "management": Object {
        "kibana": Array [
          "search_sessions",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "search",
          "url",
          "search-session",
        ],
        "read": Array [
          "index-pattern",
        ],
      },
      "ui": Array [
        "show",
        "save",
        "createShortUrl",
        "storeSearchSession",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [],
      "app": Array [
        "discover",
        "kibana",
      ],
      "catalogue": Array [
        "discover",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the filesManagement feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "files:manageFiles",
        "files:defaultImage",
      ],
      "app": Array [
        "kibana",
      ],
      "management": Object {
        "kibana": Array [
          "filesManagement",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "file",
          "fileShare",
        ],
        "read": Array [],
      },
      "ui": Array [],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "files:manageFiles",
        "files:defaultImage",
      ],
      "app": Array [
        "kibana",
      ],
      "management": Object {
        "kibana": Array [
          "filesManagement",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "file",
          "fileShare",
        ],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the filesSharedImage feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "files:defaultImage",
      ],
      "app": Array [
        "kibana",
      ],
      "savedObject": Object {
        "all": Array [
          "file",
        ],
        "read": Array [],
      },
      "ui": Array [],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "files:defaultImage",
      ],
      "app": Array [
        "kibana",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "file",
        ],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the indexPatterns feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "indexPatterns:manage",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "indexPatterns",
      ],
      "management": Object {
        "kibana": Array [
          "indexPatterns",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "index-pattern",
        ],
        "read": Array [],
      },
      "ui": Array [
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "indexPatterns",
      ],
      "management": Object {
        "kibana": Array [
          "indexPatterns",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
        ],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the savedObjectsManagement feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "copySavedObjectsToSpaces",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "saved_objects",
      ],
      "management": Object {
        "kibana": Array [
          "objects",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "foo",
          "bar",
        ],
        "read": Array [],
      },
      "ui": Array [
        "read",
        "edit",
        "delete",
        "copyIntoSpace",
        "shareIntoSpace",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "copySavedObjectsToSpaces",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "saved_objects",
      ],
      "management": Object {
        "kibana": Array [
          "objects",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "foo",
          "bar",
        ],
      },
      "ui": Array [
        "read",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the savedQueryManagement feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "savedQuery:manage",
        "savedQuery:read",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [],
      "savedObject": Object {
        "all": Array [
          "query",
        ],
        "read": Array [],
      },
      "ui": Array [
        "showQueries",
        "saveQuery",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "savedQuery:read",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "query",
        ],
      },
      "ui": Array [
        "showQueries",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the visualize feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "savedQuery:manage",
        "savedQuery:read",
      ],
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "assign": Array [],
        "create": Array [],
        "createComment": Array [],
        "delete": Array [],
        "push": Array [],
        "read": Array [],
        "reopenCase": Array [],
        "settings": Array [],
        "update": Array [],
      },
      "catalogue": Array [
        "visualize",
      ],
      "management": Object {},
      "replacedBy": Object {
        "default": Array [
          Object {
            "feature": "visualize_v2",
            "privileges": Array [
              "all",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "all",
            ],
          },
        ],
        "minimal": Array [
          Object {
            "feature": "visualize_v2",
            "privileges": Array [
              "minimal_all",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "minimal_all",
            ],
          },
        ],
      },
      "savedObject": Object {
        "all": Array [
          "visualization",
          "lens",
          "query",
          "url",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "tag",
        ],
      },
      "ui": Array [
        "show",
        "delete",
        "save",
        "saveQuery",
        "createShortUrl",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "savedQuery:read",
      ],
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "catalogue": Array [
        "visualize",
      ],
      "replacedBy": Object {
        "default": Array [
          Object {
            "feature": "visualize_v2",
            "privileges": Array [
              "read",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "read",
            ],
          },
        ],
        "minimal": Array [
          Object {
            "feature": "visualize_v2",
            "privileges": Array [
              "minimal_read",
            ],
          },
          Object {
            "feature": "savedQueryManagement",
            "privileges": Array [
              "minimal_read",
            ],
          },
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "lens",
          "tag",
          "query",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the visualize_v2 feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [],
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "assign": Array [],
        "create": Array [],
        "createComment": Array [],
        "delete": Array [],
        "push": Array [],
        "read": Array [],
        "reopenCase": Array [],
        "settings": Array [],
        "update": Array [],
      },
      "catalogue": Array [
        "visualize",
      ],
      "management": Object {},
      "savedObject": Object {
        "all": Array [
          "visualization",
          "lens",
          "url",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "tag",
        ],
      },
      "ui": Array [
        "show",
        "delete",
        "save",
        "createShortUrl",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [],
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "catalogue": Array [
        "visualize",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "lens",
          "tag",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;
